--- a/sources.bib
+++ b/sources.bib
@@ -79,3 +79,12 @@
             Formal proof development},
   ISSN    = {2150-914x},
 }
+
+@inproceedings{Ongoing2012,
+  title={The ongoing story of Gomory cuts},
+  author={Cornu{\'e}jols, G{\'e}rard},
+  booktitle={DOCUMENTA MATH.},
+  year={2012},
+  organization={Citeseer}
+}
+
